# simple_cmake

./: CMakeLists.txt
include/: main.h
src/: constructor.cpp  generator.cpp  linearalg.cpp  list_sort.cpp  main.cpp  multiprocessing.cpp  shared_memory.cpp  socket_model.cpp  threads.cpp  virtualfunc.cpp  weakptr.cpp
