cmake_minimum_required(VERSION 3.20)

set(CMAKE_C_COMPILER gcc)
set(CMAKE_CXX_COMPILER g++)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(simple_cmake CXX)
include_directories(include)
add_library(multiproc STATIC src/multiprocessing.cpp)
target_compile_options(multiproc PRIVATE -g -O0)
add_library(vf STATIC src/virtualfunc.cpp)
target_compile_options(vf PRIVATE -g -O0)
add_library(cs STATIC src/constructor.cpp)
target_compile_options(cs PRIVATE -g -O0)
add_library(th STATIC src/threads.cpp)
target_compile_options(th PRIVATE -g -O0)
add_library(sm STATIC src/shared_memory.cpp)
target_compile_options(sm PRIVATE -g -O0)
add_library(so STATIC src/socket_model.cpp)
target_compile_options(so PRIVATE -g -O0)
add_library(ls STATIC src/list_sort.cpp)
target_compile_options(ls PRIVATE -g -O0)
add_library(wp STATIC src/weakptr.cpp)
target_compile_options(wp PRIVATE -g -O0)
add_library(gen STATIC src/generator.cpp)
target_compile_options(gen PRIVATE -g -O0 -fcoroutines)
add_executable(obj src/main.cpp)
target_link_libraries(obj multiproc vf cs th sm so ls wp gen)
target_compile_options(obj PRIVATE -g -O0 --save-temps)
install(TARGETS obj DESTINATION bin)
